[gd_scene load_steps=55 format=4 uid="uid://cfgro3wgf6ytq"]

[ext_resource type="Script" uid="uid://bk6qcv474l0gl" path="res://scripts/salle_de_bain/salle_de_bain.gd" id="1_gftd5"]
[ext_resource type="Script" uid="uid://b8pak57hfn6k2" path="res://scripts/murs.gd" id="2_3k1xi"]
[ext_resource type="Texture2D" uid="uid://6d36h7qncyvf" path="res://assets/mur/mur_bleu.png" id="3_iqw53"]
[ext_resource type="Texture2D" uid="uid://bt6q178aqcjq" path="res://assets/mur/mur_rouge.png" id="4_ct6m4"]
[ext_resource type="Texture2D" uid="uid://denrvt3168w3q" path="res://assets/mur/mur_vert.png" id="5_fc42i"]
[ext_resource type="Texture2D" uid="uid://l8snwins3xjd" path="res://sol/parquet-brun-clair-fin-(milieu)-pixilart(1).png" id="6_wiuqd"]
[ext_resource type="Texture2D" uid="uid://biihxfugstveu" path="res://sol/parquet-brun-clair-fin-(milieu)-pixilart.png" id="7_2jt3a"]
[ext_resource type="Texture2D" uid="uid://fm5bui5nacmc" path="res://sol/parquet-brun-clair-pixilart(1).png" id="8_3hpeo"]
[ext_resource type="Texture2D" uid="uid://trxci3tyhtj6" path="res://sol/parquet-brun-clair-pixilart(2).png" id="9_l3dv1"]
[ext_resource type="Texture2D" uid="uid://bdkow7n0au8bv" path="res://sol/parquet-brun-clair-pixilart.png" id="10_4475g"]
[ext_resource type="Texture2D" uid="uid://e41tvwpti1lr" path="res://sol/pixilart-drawing(2).png" id="11_l3kmi"]
[ext_resource type="Texture2D" uid="uid://bwsmuhcbuofkt" path="res://assets/meubles/dortoir/fenetres.png" id="12_gftd5"]
[ext_resource type="Texture2D" uid="uid://bd588elwro642" path="res://assets/meubles/salle_de_bain/toilettes.png" id="13_xhtir"]
[ext_resource type="Texture2D" uid="uid://dqqiqvkujmc2y" path="res://assets/meubles/salle_de_bain/lavabo.png" id="14_432u0"]
[ext_resource type="PackedScene" uid="uid://bidemcih0p3dj" path="res://scenes/salles/menu.tscn" id="15_ikart"]
[ext_resource type="AudioStream" uid="uid://db351d17gu0mw" path="res://musique/door_opening.ogg" id="16_mwycu"]
[ext_resource type="AudioStream" uid="uid://cr2kumhram588" path="res://musique/magasin_background.mp3" id="17_0nkk2"]
[ext_resource type="AudioStream" uid="uid://2cgu5caxdtib" path="res://musique/people_talking.mp3" id="18_3l0iv"]
[ext_resource type="AudioStream" uid="uid://dy2fgb1xrufnu" path="res://musique/piece_background.mp3" id="19_gftd5"]
[ext_resource type="Script" uid="uid://djon206v104w1" path="res://scripts/liste_objets.gd" id="20_trf8k"]
[ext_resource type="Texture2D" uid="uid://2hoctweset2l" path="res://assets/meubles/salle_de_bain/tapis.png" id="21_y4dqp"]
[ext_resource type="Script" uid="uid://bv1edvx7phtyi" path="res://scripts/object.gd" id="22_jh5jd"]
[ext_resource type="Texture2D" uid="uid://dw7frmrfx3n14" path="res://assets/meubles/salle_de_bain/baignoire.png" id="23_q8e83"]
[ext_resource type="Texture2D" uid="uid://be3s1wulp1xwt" path="res://assets/meubles/salle_de_bain/cadre.png" id="24_qce5k"]
[ext_resource type="Texture2D" uid="uid://l1v0a03v20mb" path="res://assets/meubles/salle_de_bain/douche.png" id="25_nnaob"]
[ext_resource type="Texture2D" uid="uid://bx4lfpviv58b8" path="res://assets/meubles/salle_de_bain/etagere.png" id="26_s8mc3"]
[ext_resource type="Texture2D" uid="uid://c2w4pmmy1twwc" path="res://assets/meubles/salle_de_bain/miroir.png" id="27_qkv8e"]
[ext_resource type="Texture2D" uid="uid://hyp5er77j3g6" path="res://assets/meubles/salle_de_bain/panierMetal.png" id="28_0yqfc"]
[ext_resource type="Texture2D" uid="uid://d3lxlhxxj43pg" path="res://assets/meubles/salle_de_bain/panierPlastique.png" id="29_lfm11"]
[ext_resource type="Texture2D" uid="uid://cfxbfi0sln86j" path="res://assets/meubles/salle_de_bain/poubelle.png" id="30_vhcnt"]
[ext_resource type="Texture2D" uid="uid://1qsqbymmy0m7" path="res://temp/lamp.png" id="31_edomr"]
[ext_resource type="PackedScene" uid="uid://1slb4ng5gwih" path="res://scenes/magasin/magasin.tscn" id="32_ks3bv"]
[ext_resource type="PackedScene" uid="uid://bjqgfx63o5avc" path="res://scenes/salles/perso_1.tscn" id="33_p53d6"]
[ext_resource type="Script" uid="uid://bp1e5vkybbp4w" path="res://scripts/broken_object.gd" id="34_dxgww"]
[ext_resource type="Texture2D" uid="uid://821byo2hhr53" path="res://temp/broken_washingMachine.png" id="35_x3nwk"]
[ext_resource type="Texture2D" uid="uid://djw3gqbcyhoau" path="res://temp/dust1.png" id="36_dho6o"]
[ext_resource type="Texture2D" uid="uid://dos3isfllrblk" path="res://temp/dust2.png" id="37_rel6p"]
[ext_resource type="Texture2D" uid="uid://cwaed2qcy08uy" path="res://temp/washingMachine.png" id="38_4e3rn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ip76g"]
texture = ExtResource("6_wiuqd")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avpxn"]
texture = ExtResource("7_2jt3a")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itmto"]
texture = ExtResource("8_3hpeo")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v4ikx"]
texture = ExtResource("9_l3dv1")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3i8f6"]
texture = ExtResource("10_4475g")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6g4tk"]
texture = ExtResource("11_l3kmi")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_duoh5"]
tile_size = Vector2i(70, 70)
sources/4 = SubResource("TileSetAtlasSource_3i8f6")
sources/5 = SubResource("TileSetAtlasSource_6g4tk")
sources/3 = SubResource("TileSetAtlasSource_v4ikx")
sources/2 = SubResource("TileSetAtlasSource_itmto")
sources/1 = SubResource("TileSetAtlasSource_avpxn")
sources/0 = SubResource("TileSetAtlasSource_ip76g")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6j4ok"]
load_path = "res://.godot/imported/rideaux.png-e50cd7d83f12a89109e73e09097cc64f.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cx3ow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3j5g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gc0mp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gghgv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ao46"]

[sub_resource type="Animation" id="Animation_gc0mp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("35_x3nwk")]
}

[sub_resource type="Animation" id="Animation_i3j5g"]
resource_name = "reparer"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../marginContainer/textureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("36_dho6o"), ExtResource("37_rel6p"), ExtResource("36_dho6o"), ExtResource("38_4e3rn")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gghgv"]
_data = {
&"RESET": SubResource("Animation_gc0mp"),
&"reparer": SubResource("Animation_i3j5g")
}

[node name="salleDeBain" type="Node2D" node_paths=PackedStringArray("Personnages")]
script = ExtResource("1_gftd5")
Personnages = NodePath("perso")

[node name="murs" type="Node2D" parent="."]
script = ExtResource("2_3k1xi")

[node name="mur1" type="Sprite2D" parent="murs"]
z_index = -3
position = Vector2(37.5, -169.5)
scale = Vector2(1.99595, 0.951737)
texture = ExtResource("3_iqw53")

[node name="mur2" type="Sprite2D" parent="murs"]
visible = false
z_index = -3
position = Vector2(32.4999, -270)
scale = Vector2(0.764062, 0.259259)
texture = ExtResource("4_ct6m4")

[node name="mur3" type="Sprite2D" parent="murs"]
visible = false
z_index = -3
position = Vector2(37.5, -270)
scale = Vector2(0.984667, 0.186667)
texture = ExtResource("5_fc42i")

[node name="sol" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2////AgAAAAAAAAD2/wAAAgAAAAAAAAD2/wEAAgAAAAAAAAD2/wIAAgAAAAAAAAD2/wMAAgAAAAAAAAD2/wQAAgAAAAAAAAD2/wUAAgAAAAAAAAD3////BQAAAAAAAAD3/wAABQAAAAAAAAD3/wEABQAAAAAAAAD3/wIABQAAAAAAAAD3/wMABQAAAAAAAAD3/wQABQAAAAAAAAD3/wUABQAAAAAAAAD4////BQAAAAAAAAD4/wAABQAAAAAAAAD4/wEABQAAAAAAAAD4/wIABQAAAAAAAAD4/wMABQAAAAAAAAD4/wQABQAAAAAAAAD4/wUABQAAAAAAAAD5////BQAAAAAAAAD5/wAABQAAAAAAAAD5/wEABQAAAAAAAAD5/wIABQAAAAAAAAD5/wMABQAAAAAAAAD5/wQABQAAAAAAAAD5/wUABQAAAAAAAAD6////BQAAAAAAAAD6/wAABQAAAAAAAAD6/wEABQAAAAAAAAD6/wIABQAAAAAAAAD6/wMABQAAAAAAAAD6/wQABQAAAAAAAAD6/wUABQAAAAAAAAD7////BQAAAAAAAAD7/wAABQAAAAAAAAD7/wEABQAAAAAAAAD7/wIABQAAAAAAAAD7/wMABQAAAAAAAAD7/wQABQAAAAAAAAD7/wUABQAAAAAAAAD8////BQAAAAAAAAD8/wAABQAAAAAAAAD8/wEABQAAAAAAAAD8/wIABQAAAAAAAAD8/wMABQAAAAAAAAD8/wQABQAAAAAAAAD8/wUABQAAAAAAAAD9////BQAAAAAAAAD9/wAABQAAAAAAAAD9/wEABQAAAAAAAAD9/wIABQAAAAAAAAD9/wMABQAAAAAAAAD9/wQABQAAAAAAAAD9/wUABQAAAAAAAAD+////BQAAAAAAAAD+/wAABQAAAAAAAAD+/wEABQAAAAAAAAD+/wIABQAAAAAAAAD+/wMABQAAAAAAAAD+/wQABQAAAAAAAAD+/wUABQAAAAAAAAD/////BQAAAAAAAAD//wAABQAAAAAAAAD//wEABQAAAAAAAAD//wIABQAAAAAAAAD//wMABQAAAAAAAAD//wQABQAAAAAAAAD//wUABQAAAAAAAAAAAP//BQAAAAAAAAAAAAAABQAAAAAAAAAAAAEABQAAAAAAAAAAAAIABQAAAAAAAAAAAAMABQAAAAAAAAAAAAQABQAAAAAAAAAAAAUABQAAAAAAAAABAP//BQAAAAAAAAABAAAABQAAAAAAAAABAAEABQAAAAAAAAABAAIABQAAAAAAAAABAAMABQAAAAAAAAABAAQABQAAAAAAAAABAAUABQAAAAAAAAACAP//BQAAAAAAAAACAAAABQAAAAAAAAACAAEABQAAAAAAAAACAAIABQAAAAAAAAACAAMABQAAAAAAAAACAAQABQAAAAAAAAACAAUABQAAAAAAAAADAP//BQAAAAAAAAADAAAABQAAAAAAAAADAAEABQAAAAAAAAADAAIABQAAAAAAAAADAAMABQAAAAAAAAADAAQABQAAAAAAAAADAAUABQAAAAAAAAAEAP//BQAAAAAAAAAEAAAABQAAAAAAAAAEAAEABQAAAAAAAAAEAAIABQAAAAAAAAAEAAMABQAAAAAAAAAEAAQABQAAAAAAAAAEAAUABQAAAAAAAAAFAP//BQAAAAAAAAAFAAAABQAAAAAAAAAFAAEABQAAAAAAAAAFAAIABQAAAAAAAAAFAAMABQAAAAAAAAAFAAQABQAAAAAAAAAFAAUABQAAAAAAAAAGAP//BQAAAAAAAAAGAAAABQAAAAAAAAAGAAEABQAAAAAAAAAGAAIABQAAAAAAAAAGAAMABQAAAAAAAAAGAAQABQAAAAAAAAAGAAUABQAAAAAAAAAHAP//BQAAAAAAAAAHAAAABQAAAAAAAAAHAAEABQAAAAAAAAAHAAIABQAAAAAAAAAHAAMABQAAAAAAAAAHAAQABQAAAAAAAAAHAAUABQAAAAAAAAAIAP//BQAAAAAAAAAIAAAABQAAAAAAAAAIAAEABQAAAAAAAAAIAAIABQAAAAAAAAAIAAMABQAAAAAAAAAIAAQABQAAAAAAAAAIAAUABQAAAAAAAAAJAP//BQAAAAAAAAAJAAAABQAAAAAAAAAJAAEABQAAAAAAAAAJAAIABQAAAAAAAAAJAAMABQAAAAAAAAAJAAQABQAAAAAAAAAJAAUABQAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AwAAAAAAAAAKAAAAAwAAAAAAAAAKAAEAAwAAAAAAAAAKAAIAAwAAAAAAAAAKAAMAAwAAAAAAAAAKAAQAAwAAAAAAAAAKAAUAAwAAAAAAAAADAP7/BAAAAAAAAAAEAP7/BAAAAAAAAAAFAP7/BAAAAAAAAAAGAP7/BAAAAAAAAAAHAP7/BAAAAAAAAAAIAP7/BAAAAAAAAAAJAP7/BAAAAAAAAAD2//7/AQAAAAAAAAD3//7/BAAAAAAAAAD4//7/BAAAAAAAAAD5//7/BAAAAAAAAAD6//7/BAAAAAAAAAD7//7/BAAAAAAAAAD8//7/BAAAAAAAAAD9//7/BAAAAAAAAAD+//7/BAAAAAAAAAD///7/BAAAAAAAAAAAAP7/BAAAAAAAAAABAP7/BAAAAAAAAAACAP7/BAAAAAAAAAA=")
tile_set = SubResource("TileSet_duoh5")

[node name="objetBase" type="Node2D" parent="sol"]

[node name="fenÃªtre" type="Sprite2D" parent="sol/objetBase"]
position = Vector2(242.69014, -350.25482)
scale = Vector2(3.1757207, 3.5873766)
texture = ExtResource("12_gftd5")

[node name="toilettes" type="Sprite2D" parent="sol/objetBase"]
position = Vector2(-181, -166)
scale = Vector2(5.10133, 4.54865)
texture = ExtResource("13_xhtir")

[node name="lavabo" type="Sprite2D" parent="sol/objetBase"]
position = Vector2(47, -210)
scale = Vector2(4.32057, 3.82786)
texture = ExtResource("14_432u0")

[node name="camera2D" type="Camera2D" parent="."]
position = Vector2(34, 0)
zoom = Vector2(0.78, 0.78)

[node name="menu" parent="." instance=ExtResource("15_ikart")]
offset_left = 361.0
offset_top = -402.0
offset_right = 361.0
offset_bottom = -402.0

[node name="songs" type="Node" parent="."]

[node name="porte" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("16_mwycu")

[node name="magasinBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("17_0nkk2")

[node name="talkingPeople" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("18_3l0iv")
volume_db = -30.0

[node name="mainBackground" type="AudioStreamPlayer2D" parent="songs"]
stream = ExtResource("19_gftd5")
autoplay = true

[node name="listeObjets" type="Node2D" parent="."]
script = ExtResource("20_trf8k")

[node name="tapis" type="Sprite2D" parent="listeObjets"]
position = Vector2(-155, 124)
scale = Vector2(34.1267, 27.8308)
texture = ExtResource("21_y4dqp")
script = ExtResource("22_jh5jd")

[node name="baignoire" type="Sprite2D" parent="listeObjets"]
position = Vector2(246, -174)
scale = Vector2(4.03247, 3.84654)
texture = ExtResource("23_q8e83")
script = ExtResource("22_jh5jd")

[node name="cadre" type="Sprite2D" parent="listeObjets"]
position = Vector2(-113, -326)
scale = Vector2(7.36611, 7.24864)
texture = ExtResource("24_qce5k")
script = ExtResource("22_jh5jd")

[node name="douche" type="Sprite2D" parent="listeObjets"]
position = Vector2(-532, -263)
scale = Vector2(6.06268, 5.73921)
texture = ExtResource("25_nnaob")
script = ExtResource("22_jh5jd")

[node name="etagere" type="Sprite2D" parent="listeObjets"]
position = Vector2(-277, -316)
scale = Vector2(7.08281, 6.38501)
texture = ExtResource("26_s8mc3")
script = ExtResource("22_jh5jd")

[node name="miroir" type="Sprite2D" parent="listeObjets"]
position = Vector2(46, -320)
scale = Vector2(6.14708, 5.26788)
texture = ExtResource("27_qkv8e")
script = ExtResource("22_jh5jd")

[node name="panierMetal" type="Sprite2D" parent="listeObjets"]
position = Vector2(-352, -162)
scale = Vector2(4.13711, 3.37908)
texture = ExtResource("28_0yqfc")
script = ExtResource("22_jh5jd")

[node name="panierPlastique" type="Sprite2D" parent="listeObjets"]
position = Vector2(-647, -152)
scale = Vector2(3.7807, 3.59647)
texture = ExtResource("29_lfm11")
script = ExtResource("22_jh5jd")

[node name="poubelle" type="Sprite2D" parent="listeObjets"]
position = Vector2(279.689, 302.213)
scale = Vector2(3.31352, 3.74894)
texture = ExtResource("30_vhcnt")
script = ExtResource("22_jh5jd")

[node name="lampe" type="Sprite2D" parent="listeObjets"]
visible = false
position = Vector2(-129, 311)
scale = Vector2(3.31352, 3.74894)
texture = ExtResource("31_edomr")
script = ExtResource("22_jh5jd")

[node name="rideaux" type="Sprite2D" parent="listeObjets"]
visible = false
position = Vector2(240.946, -330)
scale = Vector2(0.937075, 0.652211)
texture = SubResource("CompressedTexture2D_6j4ok")
script = ExtResource("22_jh5jd")

[node name="store" parent="." instance=ExtResource("32_ks3bv")]
visible = false
z_index = 2
position = Vector2(-691, -415)

[node name="magazin" parent="store" index="0"]
position = Vector2(731.00006, 419)
scale = Vector2(1.4472657, 1.22474)

[node name="perso" type="Node2D" parent="."]

[node name="perso1" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("33_p53d6")]
position = Vector2(-366, -61)
ListeObjets = NodePath("../../listeObjets")

[node name="perso2" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("33_p53d6")]
position = Vector2(10, 123)
ListeObjets = NodePath("../../listeObjets")

[node name="perso3" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("33_p53d6")]
position = Vector2(-338, 237)
ListeObjets = NodePath("../../listeObjets")

[node name="perso4" parent="perso" node_paths=PackedStringArray("ListeObjets") instance=ExtResource("33_p53d6")]
position = Vector2(-588, 128)
ListeObjets = NodePath("../../listeObjets")

[node name="brokenObject" type="Node2D" parent="."]
position = Vector2(-685, 208)
script = ExtResource("34_dxgww")

[node name="objetCasse" type="Button" parent="brokenObject"]
z_index = 1
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cx3ow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i3j5g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gc0mp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gghgv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ao46")
flat = true

[node name="btnReparer" type="Button" parent="brokenObject/objetCasse"]
visible = false
top_level = true
layout_mode = 0
offset_left = -669.0
offset_top = 162.0
offset_right = -482.0
offset_bottom = 198.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 20

[node name="marginContainer" type="MarginContainer" parent="brokenObject"]
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2

[node name="textureRect" type="TextureRect" parent="brokenObject/marginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("35_x3nwk")
stretch_mode = 5

[node name="animationRepare" type="AnimationPlayer" parent="brokenObject/marginContainer/textureRect"]
unique_name_in_owner = true
root_node = NodePath("../../../objetCasse")
libraries = {
&"": SubResource("AnimationLibrary_gghgv")
}

[connection signal="pressed" from="brokenObject/objetCasse" to="brokenObject" method="_on_objet_casse_pressed"]
[connection signal="pressed" from="brokenObject/objetCasse/btnReparer" to="." method="_on_btn_reparer_pressed"]

[editable path="store"]
